# TykhePot

./: AGENTS.md  AIRDROP_VAULT_FIX_SIMPLE.md  AIRDROP_VAULT_FIX_SUMMARY.md  AUDIT_REPORT_FIX.md  HEARTBEAT.md  SOLANA_PLAYGROUND_GUIDE.md  asset-manifest.json  index.html  init.html  platform-fee-wallet.json  vercel.json
.github/workflows/: deploy-frontend.yml
.openclaw/: workspace-state.json
TykhePot/: .gitignore  AIRDROP_FIX_DEPLOYMENT_GUIDE.md  ANCHOR_0_29_FIX_REPORT.md  AUDIT_REPORT.md  AUDIT_REPORT_2026.md  AUDIT_REPORT_2026_v2.md  AUDIT_REPORT_FINAL.md  CHANGELOG.md  DEPLOY_STATUS.md  DEPLOY_VERIFY_GUIDE.md  FINAL_REPORT.md  LICENSE  MAINNET_LAUNCH.md  PROGRESS_UPDATE.md  PROJECT_ANALYSIS.md  PROJECT_REPORT.md  README.md  RULES.md  check-metadata.js  deploy-demo.sh  deploy-mainnet.sh  deploy.sh  fix-and-deploy-airdrop.sh  get-sol.sh  metadata.json  quick-deploy-devnet.sh  register-metadata.js  staged-launch.sh  tpot-metadata.json  vercel.json
TykhePot/docs/: DEPLOYMENT_GUIDE.md  PRIVACY_POLICY.md  RISK_DISCLOSURE.md  TERMS_OF_SERVICE.md  api.md  community-incentive.md  deployment-checklist.md  free-audit-plan.md  security-audit.md  whitepaper.md
TykhePot/frontend/: .env.demo  .env.example  README.md  check-m.js  check-metadata2.js  check-tmetadata.js  check-token.js  config-overrides.js  create-new-token.mjs  init-direct.js  init-protocol.js  init-step2.js  (+9 more)
TykhePot/smart-contract/programs/royalpot/: Cargo.toml
TykhePot/smart-contract/programs/royalpot/src/: airdrop.rs  lib.rs  lib.rs.bak  randomness.rs  staking.rs
memory/: 2026-02-24.md  MEMORY.md
(+81 files in other folders)
